fixed colorInfo height on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,6 +127,10 @@ button.button {
 
 @media screen and (max-width: 600px) {
 
+  .main {
+    max-height: none;
+  }
+
   h1 {
     margin: 20px;
   }
